--- a/stylesheet2.css
+++ b/stylesheet2.css
@@ -19,12 +19,12 @@ body {
   text-align: center;
   width:100%;
   height:600px;
+  margin-top:30px;
 }
 
 span{
     border-bottom:1px solid#0033ff;
     color:#0033ff;
-    margin-top:20px;
     font-size:14px;
 }
 
@@ -34,9 +34,14 @@ span:hover{
 }
 
 input{
-  width:170px;
-  height:20px;
   margin:15px;
+}
+
+.sousin{
+  text-align: center;
+  background:#8EB8FF;
+  border:1px solid black;
+
 }
 
 h1{
